added hyperlinks for email

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                         <p>Game Designer</p>
                         <p>Programmer</p>
                         <p>3D Artist</p>
-                        <p>steven@blastzonestudios.com</p>
+                        <p><a href="mailto:steven@blastzonestudios.com?subject=Hello%20There!" title="Steven">steven@blastzonestudios.com</a></p>
                     </section>
                 </div>
 				<div class="col-sm-3">
@@ -128,7 +128,7 @@
                         </header>
                         <p>Programmer</p>
                         <p>Systems Architect</p>
-                        <p>jimmy@blastzonestudios.com</p>
+                        <p><a href="mailto:jimmy@blastzonestudios.com?subject=Hello%20There!" title="Jimmy">jimmy@blastzonestudios.com</a></p>
                     </section>
                 </div>
             </div>
@@ -142,7 +142,7 @@
                             <h3>Raleigh</h3>
                         </header>
                         <p>Public Relations</p>
-                        <p>raleigh@blastzonestudios.com</p>
+                        <p><a href="mailto:raleigh@blastzonestudios.com?subject=Hello%20There!" title="Raleigh">raleigh@blastzonestudios.com</a></p>
                     </section>
                 </div>
                 <div class="col-sm-3">
@@ -154,7 +154,7 @@
                             <h3>Audrie</h3>
                         </header>
                         <p>Graphic Designer</p>
-                        <p>audrie@blastzonestudios.com</p>
+                        <p><a href="mailto:audrie@blastzonestudios.com?subject=Hello%20There!" title="Audrie">audrie@blastzonestudios.com</a></p>
                     </section>
                 </div>
             </div>
@@ -168,7 +168,7 @@
                             <h3>Dana</h3>
                         </header>
                         <p>Narrative Designer</p>
-                        <p>dana@blastzonestudios.com</p>
+                        <p><a href="mailto:dana@blastzonestudios.com?subject=Hello%20There!" title="Dana">dana@blastzonestudios.com</a></p>
                     </section>
                 </div>
 				<div class="col-sm-3">
@@ -181,7 +181,7 @@
                         </header>
                         <p>Composer</p>
                         <p>Sound Engineer</p>
-                        <p>dan@blastzonestudios.com</p>
+                        <p><a href="mailto:dan@blastzonestudios.com?subject=Hello%20There!" title="Dan">dan@blastzonestudios.com</a></p>
                     </section>
                 </div>
             </div>
@@ -195,7 +195,7 @@
                             <h3>Aaron</h3>
                         </header>
                         <p>Production Assistant</p>
-                        <p>aaron@blastzonestudios.com</p>
+                        <p><a href="mailto:aaron@blastzonestudios.com?subject=Hello%20There!" title="Aaron">aaron@blastzonestudios.com</a></p>
                     </section>
                 </div>
                 <div class="col-sm-3">
@@ -207,7 +207,7 @@
                             <h3>Dean</h3>
                         </header>
                         <p>Production Assistant</p>
-                        <p>dean@blastzonestudios.com</p>
+                        <p><a href="mailto:Dean@blastzonestudios.com?subject=Hello%20There!" title="Dean">dean@blastzonestudios.com</a></p>
                     </section>
                 </div>
             </div>
