--- a/index.html
+++ b/index.html
@@ -135,19 +135,22 @@
                 <aside>
                     <!-- Blog Search Well -->
                     <div class="well">
-                        <section>
-                            <h4>Sign up for more BZS</h4>
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Enter e-mail address">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button">
-                                        Join
-                                    </button>
-                                </span>
-                            </div>
-                            <!-- /.input-group -->
-                        </section>
+                      <section>
+                        <h4>Sign up for more BZS</h4>
+                        <form action="//blastzonestudios.us9.list-manage.com/subscribe/post?u=c14c3757e306d161d8321c3bf&amp;id=58ed18fcf5" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                          <div class="input-group" id="mc_embed_signup_scroll">
+
+
+                            <input type="email" value="" name="EMAIL" class="form-control" id="mce-EMAIL" placeholder="Enter e-mail address" required>
+                            <span class="input-group-btn"><input type="submit" value="Join" name="subscribe" id="mc-embedded-subscribe" class="btn btn-default"></span>
+                            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                            <input type="hidden" name="b_c14c3757e306d161d8321c3bf_58ed18fcf5" tabindex="-1" value="">
+                          </div>
+                        </form>
+                      </section>
                     </div>
+
+                    <!--End mc_embed_signup-->
 
                 <!-- Side Widget Well -->
                 <div class="well">
