added about descr.

--- a/about.html
+++ b/about.html
@@ -103,6 +103,10 @@
 		<div class="block">
 
             <h2 id ="about" class="page-header">About Us</h2>
+            <p>Blast Zone Studios is an indie software development company founded in early 2013. The company specializes in creating mobile games for Android and iOS.
+              However, they plan to branch out to make games on other platforms. Blast Zone Studios manages to produce enjoyable games remarkably quick.
+              Titles including Sushi Bear and Hoops Up were created in less then a week. The company strives to create addicting games that are unique and accessible to people of all ages.</p>
+              <br>
             <div class="row">
                 <div class="col-sm-3">
                     <img class="img-responsive img-circle" alt="300x200" src="http://placehold.it/300x300">
