--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <article>
                     <header>
                        <h2>
-                        <a href="#">Exploring Horror</a>
+                        <a href="#"><b>Exploring Horror</b></a>
                         </h2>
                           <p>December 10th, 2014</p>
                        </header>
